# navi

./: Cargo.toml  README.md  justfile
.github/workflows/: cd.yml  ci.yml
docs/: README.md
docs/cheatsheet/: README.md
docs/cheatsheet/getting-started/: README.md
docs/cheatsheet/repositories/: README.md
docs/cheatsheet/syntax/: README.md
docs/configuration/: README.md
docs/contributions/bugs/: README.md
docs/contributions/code/: README.md
docs/examples/cheatsheet/: filtering_example.cheat  navi.cheat
docs/examples/configuration/: config-example.toml
docs/installation/: README.md
docs/usage/: README.md
docs/usage/commands/info/: README.md
docs/usage/fzf-overrides/: README.md
docs/usage/shell-scripting/: README.md
scripts/: test.sh
src/: env_var.rs  filesystem.rs  lib.rs  parser.rs  prelude.rs  preview_context.rs
src/clients/: cheatsh.rs  tldr.rs
src/commands/: info.rs  temp.rs
src/commands/core/: actor.rs  mod.rs  preview.rs  suggestion.rs
src/commands/func/: map.rs  widget.rs
src/commands/preview/: mod.rs  var.rs  var_stdin.rs
src/commands/repo/: add.rs  browse.rs  mod.rs
src/common/: clipboard.rs  fs.rs  mod.rs  shell.rs  terminal.rs  types.rs  url.rs
src/config/: cli.rs  mod.rs  toml.rs
src/deser/: terminal.rs
src/display/: mod.rs  terminal.rs
src/finder/: mod.rs  post.rs  structures.rs
src/structures/: item.rs
tests/: config.toml  core.sh  run  run.sh
tests/cheats/: more_cases.cheat
tests/no_prompt_cheats/: cases.cheat
vim/: README.md
vim/ftdetect/: cheat.vim
vim/syntax/: cheat.vim
(+1 files in other folders)
