[package]
name = "navi"
version = "3.0.0"
authors = [
  "Parham Alvani <parham.alvani@gmail.com>",
  "Denis Isidoro <denis_isidoro@live.com>",
  "Alexis Opolka <alexis.opolka@protonmail.com>",
]
edition = "2024"
description = "An interactive cheatsheet tool for the command-line"
homepage = "https://github.com/1995parham/navi"
documentation = "https://github.com/1995parham/navi"
repository = "https://github.com/1995parham/navi"
keywords = ["cheatsheets", "terminal", "cli", "tui", "shell"]
categories = ["command-line-utilities"]
license = "Apache-2.0"

[features]
disable-command-execution = []
disable-repo-management = []

[dependencies]
regex = { version = "1.7.3", default-features = false, features = [
  "std",
  "unicode-perl",
] }
clap = { version = "4.2.1", features = ["derive", "cargo"] }
crossterm = "0.29.0"
lazy_static = "1.4.0"
etcetera = "0.10.0"
walkdir = "2.3.3"
shellwords = "1.1.0"
anyhow = "1.0.70"
thiserror = "2.0.0"
strip-ansi-escapes = "0.2.0"
edit = "0.1.4"
remove_dir_all = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8"
unicode-width = "0.2.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
dunce = "1"

[lib]
name = "navi"
path = "src/lib.rs"

[[bin]]
name = "navi"
path = "src/bin/main.rs"
bench = false
